Reformatted code to make it more readable.

--- a/src/cti_publishing_tool/templates/CTID-TAReportTemplate.html
+++ b/src/cti_publishing_tool/templates/CTID-TAReportTemplate.html
@@ -62,7 +62,7 @@
         <p>{{ assessment }}</p>
         <h2>Threat Actor</h2>
         <p>{{ threat_actor.summary }}</p>
-        <h3>Tactics, Techniques, &amp;</h3>
+        <h3>Tactics, Techniques, &amp; Procedures</h3>
         <p>{{ threat_actor.ttp }}</p>
         <h3>Infrastructure</h3>
         <p>{{ threat_actor.infrastructure }}</p>
