--- a/src/cti_publishing_tool/templates/CTID-IAReportTemplate.html
+++ b/src/cti_publishing_tool/templates/CTID-IAReportTemplate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CTID - Campaign Report</title>
+        <title>CTID - Intrusion Analysis Report</title>
         <style>
             body {
                 white-space: pre-wrap;
@@ -75,15 +75,17 @@
                 </tr>
             </thead>
             <tbody>
-                {%- for attack_entry in mitre_attack_table.likely_in_network -%}
-                <td>{{ attack_entry.attribution }}</td>
-                <td>{{ attack_entry.tactic }}</td>
-                <td>{{ attack_entry.technique }}</td>
-                <td>{{ attack_entry.sub_technique }}</td>
-                <td>{{ attack_entry.procedure }}</td>
-                <td>{{ attack_entry.defend }}</td>
-                <td>{{ attack_entry.control }}</td>
-                {%- endfor -%}
+                {% for attack_entry in mitre_attack_table.likely_in_network %}
+                <tr>
+                    <td>{{ attack_entry.attribution }}</td>
+                    <td>{{ attack_entry.tactic }}</td>
+                    <td>{{ attack_entry.technique }}</td>
+                    <td>{{ attack_entry.sub_technique }}</td>
+                    <td>{{ attack_entry.procedure }}</td>
+                    <td>{{ attack_entry.defend }}</td>
+                    <td>{{ attack_entry.control }}</td>
+                </tr>
+                {% endfor %}
             </tbody>
         </table>
         <h2>MITRE ATT&amp;CK Table (based on v12): TTPs Observed in the Intrusion</h2>
@@ -100,11 +102,13 @@
             </thead>
             <tbody>
                 {%- for ttp_entry in mitre_attack_table.observed -%}
-                <td>{{ ttp_entry.tactic }}</td>
-                <td>{{ ttp_entry.technique }}</td>
-                <td>{{ ttp _entry.sub_technique }}</td>
-                <td>{{ ttp_entry.procedure }}</td>
-                <td>{{ ttp_entry.defend }}</td>
+                <tr>
+                    <td>{{ ttp_entry.tactic }}</td>
+                    <td>{{ ttp_entry.technique }}</td>
+                    <td>{{ ttp _entry.sub_technique }}</td>
+                    <td>{{ ttp_entry.procedure }}</td>
+                    <td>{{ ttp_entry.defend }}</td>
+                </tr>
                 {%- endfor -%}
             </tbody>
         </table>
