Changed to dynamic report creation, implemented filtering.

--- a/src/cti_publishing_tool/templates/sections/report_intro.html
+++ b/src/cti_publishing_tool/templates/sections/report_intro.html
@@ -3,6 +3,7 @@
                 <thead>
                     <tr>
                         <th>Report Date</th>
+                        <th>Report Number</th>
                         <th>Sensitivity</th>
                         <th>Traffic Light Protocol</th>
                         <th>Criticality</th>
@@ -11,6 +12,7 @@
                 <tbody>
                     <tr>
                         <td>{{ report_date }}</td>
+                        <td>{{ report_number }}</td>
                         <td>{{ sensitivity }}</td>
                         <td>{{ traffic_light_protocol }}</td>
                         <td>{{ criticality }}</td>
