--- a/src/cti_publishing_tool/templates/sections/mitre_attack_table.html
+++ b/src/cti_publishing_tool/templates/sections/mitre_attack_table.html
@@ -1,6 +1,4 @@
-<h2>MITRE ATT&amp;CK Table (based on v12)</h2>
-<p>Table of the MITRE ATT&amp;CK tactics and techniques/sub-techniques from the campaign. The procedure column details a particular instance of how a technique/sub-technique has been used. The D3FEND column includes the corresponding MITRE D3FEND countermeasure technique, if available. If using the tool, the Tactics and Techniques can be automatically generated from an Attack Flow document using the plug-in.</p>
-<table>
+<h2>MITRE ATT&amp;CK Table (based on v12)</h2><table>
     <thead>
         <tr>
             <th>Attribution</th>
