--- a/src/cti_publishing_tool/templates/sections/report_intro.html
+++ b/src/cti_publishing_tool/templates/sections/report_intro.html
@@ -21,4 +21,4 @@
             </table>
         </p>
         <hr/>
-        <h1>{{ report_title }}</h1>
+        <h1>{{ report_title | strip_newline }}</h1>
