--- a/src/cti_publishing_tool/templates/sections/threat_actor.html
+++ b/src/cti_publishing_tool/templates/sections/threat_actor.html
@@ -1,10 +1,10 @@
 <h2>Threat Actor</h2>
-<p>{{ threat_actor.summary }}</p>
+<p>{{ threat_actor.summary | newline_to_br }}</p>
 <h3>Tactics, Techniques, &amp;</h3>
-<p>{{ threat_actor.ttp }}</p>
+<p>{{ threat_actor.ttp | newline_to_br }}</p>
 <h3>Infrastructure</h3>
-<p>{{ threat_actor.infrastructure }}</p>
+<p>{{ threat_actor.infrastructure | newline_to_br }}</p>
 <h3>Victims</h3>
-<p>{{ threat_actor.victims }}</p>
+<p>{{ threat_actor.victims | newline_to_br }}</p>
 <h3>Attribution</h3>
-<p>{{ threat_actor.attribution }}</p>
+<p>{{ threat_actor.attribution | newline_to_br }}</p>
