--- a/src/cti_publishing_tool/templates/sections/metadata_ia.html
+++ b/src/cti_publishing_tool/templates/sections/metadata_ia.html
@@ -2,8 +2,8 @@
 <h3>Threat Actor:</h3>
 <ul>
     {%- for threat_actor in metadata.threat_actors -%}
-    <li>{{ threat_actor.threat_actor_name }}</li>
-    <li>{{ threat_actor.threat_actor_aliases }}</li>
+    <li>{{ threat_actor.threat_actor_name | newline_to_br }}</li>
+    <li>{{ threat_actor.threat_actor_aliases | newline_to_br }}</li>
     {%- endfor -%}
 </ul>
 <h3>Actor Motivation:</h3>
